--- a/src/main/resources/bootstrap.yaml
+++ b/src/main/resources/bootstrap.yaml
@@ -1,8 +1,9 @@
 spring:
   application:
-    name: eureka-service
+    name: aureka-service
   cloud:
     config:
       enabled: true
       uri:
-        - http://localhost:8008 #Referencia hacia config server
+        - http://localhost:8008
+#Referencia hacia config server
